tests/NormalTests/paczka1/small_fuzzy/48092304.err
Error in line 2: URQTDwJLcK A400 18,1
Error in line 7: S502 A400 57,0
Error in line 9: S502 S502 72,0
Error in line 10: jOkDIMs S502 15,1
